clang/test/BSC/Negative/Trait/GenericTrait/param_type_conflict/param_type_conflict.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F<T> {
  T foo(This* this, T a);
};

struct S{
  int x;
};

int struct S::foo(struct S* this, float a) {
  return this->x;
}

impl trait F<int> for struct S; // expected-error {{type of 'foo' conflicts with that of 'trait F<int>'}}
                                

